<resources>
    <string name="app_name">Soluciones Corporativas</string>
    <string name="soluciones_corporativas">Soluciones Corporativas</string>
    <string name="sending_message">Enviando mensaje</string>
    <string name="message_sent">Mensaje de {0} enviado.</string>
    <string name="lothar_copyrigth">Copyright (©) Lothar Systems S.A. Todos los derechos reservados.</string>
    <string name="guard_mark">Marcar</string>
    <string name="guard_metadataquery">Consultas de guardias</string>
    <string name="guard_historic">HISTORICO DE MENSAJES</string>
    <string name="guard_mark_guardCode">Codigo de guardia</string>
    <string name="guard_mark_observation">Observación</string>
    <string name="guard_mark_sendMark">Marcar</string>
    <string name="guard_mark_unknow">Desconodido</string>
    <string name="not_support_gps">La localización a través de GPS no esta disponible</string>
    <string name="not_support_network">La localización a través de la red no esta disponible</string>
    <string name="database_insert_error">Ocurrió un problema durante la insercion de un registro en la base de datos.</string>
    <string name="database_update_error">Ocurrió un problema durante la actualizacion de un registro en la base de datos.</string>
    <string name="database_delete_error">Ocurrió un problema durante la eliminación de un registro en la base de datos.</string>
    <string name="database_decypt_error">Ocurrió un problema durante la desencriptacion del archivo SQL.</string>
    <string name="database_insert_success">Inserción exitosa.</string>
    <string name="database_update_success">Actualización exitosa.</string>
    <string name="database_delete_success">Eliminación exitosa.</string>
    <string name="cstigo_database">CSTIGO Database</string>
    <string name="location_gps">Localización del dispositivo a través de GPS</string>
    <string name="location_network">Localización del dispositivo a través de la RED</string>
    <string name="location_cellid">Localización del dispositivo a través del CELL-ID</string>
    <string name="database_gps_success">Localización exitosa a través de GPS.</string>
    <string name="database_read_asset">Hubo un problema leyendo el archivo sql.</string>
    <string name="database_statement_exec">Hubo un problema ejecutando una sentencia sql.</string>
    <string name="database_error_more_than_one">Se recupero mas de un registro de la tabla.Se esperaba solo uno.</string>
    <string name="database_exec_sql">Ejecución sentencia SQL.</string>
    <string name="guard_mark_code_not_empty">El campo "Codigo de Guardia" requiere de un valor.</string>
    <string name="no_location_title">GPS Desactivado.</string>
    <string name="no_location">El dispositivo no pudo ser localizado.</string>
    <string name="no_location_notif">Active por favor</string>
    <string name="no_location_disabled_on_listening">Se desactivo mientras se recuperaba la localización.</string>
    <string name="could_not_get_location_title">El dispositivo no pudo ser localizado.</string>
    <string name="could_not_get_location_message">El GPS esta encendido pero las condiciones no fueron las optimas para obtener un punto GPS preciso.</string>
    <string name="shiftguard_name">RONDAS DE GUARDIA</string>
    <string name="shiftguard">Guardias</string>
    <string name="message_history_no_message">No hay mensajes en el historico de mensajes.</string>
    <string name="platform_new_message">Nuevo mensaje de la plataforma.</string>
    <string name="visit_start">Iniciar</string>
    <string name="visit_end">Terminar</string>
    <string name="visit_quick_visit">Visita Rápida</string>
    <string name="visit_start_clientCode">Codigo de cliente</string>
    <string name="visit_start_observation">Observación</string>
    <string name="visit_start_startVisit">Iniciar Visita</string>
    <string name="visit_start_code_not_empty">El campo "Código de Cliente" requiere de un valor.</string>
    <string name="visit_end_motive">Motivo</string>
    <string name="visit_end_observation">Observación</string>
    <string name="visit_end_endVisit">Finalizar Visita</string>
    <string name="visit_end_motive_not_empty">El campo "Motivo" requiere de un valor.</string>
    <string name="visit_quick_clientCode">Codigo de cliente</string>
    <string name="visit_quick_motive">Motivo</string>
    <string name="visit_quick_observation">Observación</string>
    <string name="visit_quick_endVisit">Marcar</string>
    <string name="visit_quick_code_not_empty">El campo "Código de Cliente" requiere de un valor.</string>
    <string name="visit_quick_motive_not_empty">El campo "Motivo" requiere de un valor.</string>
    <string name="platform_update">Actualización del dispositivo</string>
    <string name="updates">Actualizaciones</string>
    <string name="platform_update_services">Actualizar Servicios</string>
    <string name="icon_update_services">Actualizar Iconos</string>
    <string name="services">SERVICIOS</string>
    <string name="messages">Mensajes</string>
    <string name="options">Opciones</string>
    <string name="user_data">Datos de Usuario</string>
    <string name="updated_application">Actualización del dispositivo</string>
    <string name="updated_application_desc">Los servicios para el dispositivo han sido actualizados</string>
    <string name="platform_general_options">Opciones Generales</string>
    <string name="platform_general_options_service_disabled">Visualizar servicios inhabilitados</string>
    <string name="platform_vibrate">Habilitar vibracion</string>
    <string name="platform_sms_show_all">Mostrar texto completo del mensaje</string>
    <string name="sms_no_messages">No hay mensajes de la plataforma registrados en el dispositivo</string>
    <string name="no_enabled_device">El dispositivo no se encuentra habilitado para realizar esta operacion.</string>
    <string name="platform_enable_device">Habilitar dispositivo</string>
    <string name="order_observation">Observación</string>
    <string name="order_priceList">Lista de precios</string>
    <string name="order_saleCondition">Condición de venta</string>
    <string name="order_register">Registrar</string>
    <string name="processing_detail">Su mensaje esta siendo procesado por la plataforma</string>
    <string name="order_product">Producto</string>
    <string name="order_product_code">Codigo Producto</string>
    <string name="order_quantity">Cantidad</string>
    <string name="order_discount">Descuento</string>
    <string name="order_unit_price">Precio Unitario</string>
    <string name="order_client_code_not_empty">El campo "Código de Cliente" requiere de un valor.</string>
    <string name="order_price_list_not_empty">El campo "Lista de Precio" requiere de un valor.</string>
    <string name="order_sale_condition_not_empty">El campo "Condición de venta" requiere de un valor.</string>
    <string name="order_product_code_not_empty">El campo "Codigo de Producto" requiere de un valor.</string>
    <string name="order_quantity_not_empty">El campo "Cantidad" requiere de un valor.</string>
    <string name="order_details_not_empty">El pedido debe contener al menos un detalle.</string>
    <string name="imagen">Imagen</string>
    <string name="medical_visit_clinic_start">Inicio Visita Local</string>
    <string name="medical_visit_medic_start">Inicio Visita Medico</string>
    <string name="medical_visit_product_register">Registro de productos</string>
    <string name="medical_visit_medic_end">Finalizar Visita Medico</string>
    <string name="medical_visit_clinic_end">Finalizar Visita Local</string>
    <string name="medic_visit_medic_end_clinic">Finalizar Visita</string>
    <string name="medic_visit_notification_option">Opciones Notificación</string>
    <string name="medical_visit_quick_visit">Visita Rapida Local</string>
    <string name="medic_visit_name">Visitadores medicos</string>
    <string name="medic_visit_clinic_start_initial_km">Kilometraje Actual</string>
    <string name="medic_visit_clinic_start_final_km">Kilometraje Final</string>
    <string name="medic_visit_clinic_end_clinic">Finalizar Visita</string>
    <string name="medic_visit_medic_cod">Cod. Medico</string>
    <string name="medic_visit_clinic_start_visit">Iniciar Visita</string>
    <string name="medic_visit_medic_start_visit">Iniciar Visita</string>
    <string name="medic_visit_notification_date">Fecha Evento</string>
    <string name="medic_visit_notification_msg">Mensaje Evento</string>
    <string name="medic_visit_motive_cod">Cod. Motivo</string>
    <string name="medic_visit">Visitadores Medicos</string>
    <string name="no_notification">Sin notificar</string>
    <string name="one_day_before">Un dia antes</string>
    <string name="three_hour_before">Tres horas Antes</string>
    <string name="one_hour_before">Una hora antes</string>
    <string name="medic_clinic_code">Cod. Local</string>
    <string name="medic_clinic_code_not_empty">El campo "Cod. Local" requiere de un valor.</string>
    <string name="medic_clinic_motive_not_empty">El campo "Cod. Motivo" requiere de un valor.</string>
    <string name="medic_clinic_medic_not_empty">El campo "Cod. Medico" requiere de un valor.</string>
    <string name="medic_notif_date_restiction">La fecha de evento no debe ser anterior a la fecha actual.</string>
    <string name="medic_visit_notification_msg_restriction">El campo "Mensaje Evento" requiere de un valor.</string>
    <string name="courier_delivered">Entregado</string>
    <string name="courier_not_delivered">No Entregado</string>
    <string name="courier">Courrier</string>
    <string name="courier_recipient_name">Nombre Receptor</string>
    <string name="courier_observation">Observación</string>
    <string name="courier_cod_motive">Codigo Motivo</string>
    <string name="courier_register">Registrar</string>
    <string name="courier_delivered_item">Items</string>
    <string name="courier_item_code">Codigo Item</string>
    <string name="courier_receipt_name_not_empty">El campo "Nombre Receptor" requiere de un valor.</string>
    <string name="courier_motive_code_not_empty">El campo "Codigo Motivo" requiere de un valor.</string>
    <string name="courier_item_not_empty">El registro del servicio debe contener al menos un detalle.</string>
    <string name="service_order_simple">Pedido</string>
    <string name="service_order_ilimit">Pedido Ilimitado</string>
    <string name="order_end">Finalizar</string>
    <string name="order_start">Iniciar</string>
    <string name="internet_option">Opciones de Internet</string>
    <string name="service_option">Opciones de Servicios</string>
    <string name="order_alfanumeric">Precio y Cantidad Alfanumericos</string>
    <string name="ci_alfanumeric">Cédula Alfanumerica</string>
    <string name="collection_client_code">Cod. Cliente</string>
    <string name="collection_receipt_num">Num. Recibo</string>
    <string name="collection_cash">Efectivo</string>
    <string name="collection_cheque">Cheque</string>
    <string name="collection_start">Iniciar</string>
    <string name="collection_register_invoice">Registrar Factura</string>
    <string name="collection_register_payment_cash">Registrar Activo - Efectivo</string>
    <string name="collection_register_payment_check">Registrar Activo - Cheque</string>
    <string name="collection_end">Finalizar</string>
    <string name="collection_register">Registrar</string>
    <string name="metadata_create_send">Crear</string>
    <string name="metadata_create_code_empty">Para autogenerar código, enviar vacío.</string>
    <string name="metadata_create_autogenerate_code">Autogenerar código?</string>
    <string name="metadata_create_get_gps_point">Tomar punto GPS actual?</string>
    <string name="metadata_create_code">Código</string>
    <string name="metadata_create_value">Valor</string>
    <string name="metadata_update_create">Actualizar Creación de Datos</string>
</resources>