<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/clinicStartButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_clinic_start" />

    <Button
        android:id="@+id/medicStartButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_medic_start" />

    <Button
        android:id="@+id/productRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_product_register" />

    <Button
        android:id="@+id/medicEndButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_medic_end" />

    <Button
        android:id="@+id/clinicEndButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_clinic_end" />

    <Button
        android:id="@+id/clinicQuickButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/medical_visit_quick_visit" />

</LinearLayout>