<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_start" />

    <Button
        android:id="@+id/registerInvoiceButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_register_invoice" />

    <Button
        android:id="@+id/registerPaymentCashButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_register_payment_cash" />

    <Button
        android:id="@+id/registerPaymentCheckButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_register_payment_check" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_end" />

</LinearLayout>