<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/visit_start" />

    <Button
        android:id="@+id/endButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/visit_end" />

    <Button
        android:id="@+id/quickVisitButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:text="@string/visit_quick_visit" />
    


</LinearLayout>