<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="26dp"
        android:text="@string/service_option"
        android:textStyle="bold" />
    <CheckBox
        android:id="@+id/priceAlphaOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/order_alfanumeric" />
    
    <CheckBox
        android:id="@+id/ciAlphaOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/priceAlphaOption"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/ci_alfanumeric" />

</RelativeLayout>