<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/recipientNameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/courier_recipient_name"
        android:textAppearance="@style/textSize" />

    <EditText
        android:id="@+id/recipientName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipientNameView"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/observationView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipientName"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/courier_observation"
        android:textAppearance="@style/textSize" />

    <EditText
        android:id="@+id/observation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/observationView"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/courierItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/observation"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/courier_delivered_item"
        android:textAppearance="@style/textSize" />

    <LinearLayout
        android:id="@+id/orderItemlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/courierItemView"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/courierItemView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageView
        android:id="@+id/itemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/orderItemlayout"
        android:contentDescription="@string/imagen"
        android:src="@drawable/add" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/itemAdd"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_selector"
        android:text="@string/courier_register" />

</RelativeLayout>