<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/avCollClientCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/collection_client_code"
        android:textAppearance="@style/textSize" />

    <EditText
        android:id="@+id/averageCollectionClientCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avCollClientCodeLabel"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/avCollClientReceiptNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/averageCollectionClientCode"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/collection_receipt_num"
        android:textAppearance="@style/textSize" />

    <EditText
        android:id="@+id/averageCollectionReceiptNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avCollClientReceiptNumLabel"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/averageCollectionReceiptNum"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/averageCollectionCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioAverageClicked"
            android:text="@string/collection_cash" />

        <RadioButton
            android:id="@+id/averageCollectionCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioAverageClicked"
            android:text="@string/collection_cheque" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/collectionSubcontentlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >
    </LinearLayout>
    
    <Button
        android:id="@+id/averageCollectionButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/collectionSubcontentlayout"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_selector"
        android:text="@string/collection_register" />

</RelativeLayout>